# Notes

./: .drone.yml  .gitignore  LICENSE  README.md  ReadMe.md  UOS系统.md  docker 基本操作.md  gen.sh  git操作.md  install.sh  openeuler loongarch.md  rpm包构建.md  虚拟环境设置.md  证书生成.md
.github/workflows/: main.yml
00-笔记/: docker配置.md
00-系统/硬件/: K2 键盘.md
00-部署/gitlab/: gitlab部署.md
00-部署/jellyfin/: jellyfin.md
00-部署/proxmox/: proxmox.md
01-开发与编程/git/: git 项目配置.md  github不能pull.md
01-开发与编程/golang/: gin.md  go操作.md  go规范.md
01-开发与编程/python/: 单例模式.md
01-开发与编程/shell/: create_user.md  pipconf.sh  system init.md
01-系统/openwrt/: openwrt.md
01-编程/git/: git提交规范.md  git操作.md
01-编程/golang/: gin.md  go规范.md
01-编程/javascript/: vite+element3.md
01-编程/python/: fastapi.md  单例模式.md
01-编程/容器化/: db.yml  docker registry.md
02-云计算/: OpenStack Python虚拟环境搭建.md  计算节点开启嵌套虚拟化.md
02-云计算/03-kolla/: kolla.md
02-云计算/04-openstack/: Build Octavia Amphora Images.md  OpenStack Client.md  OpenStack.md
02-云计算/05-images/: images.md
02-云计算/openstack/: OpenStack.md  终端连接虚拟机的几种方式.md
02-云计算/virt/: debian.md
02-云计算与虚拟化/04-openstack/: Build Octavia Amphora Images.md  OpenStack Client.md
02-硬件/: 树莓派安装openueler.md
04-其他/: 画图示例.md
06-Linux/: Linux磁盘扩容.md
06-笔记与文档/: dashDoc 制作指南.md  提效技巧.md  画图示例.md  隧道登陆方式.md
FineOne/: nextcloud.md
T2ClOUD/: GPU.md  HCI.md  hygon cpu.md  task.md
cmake/cmake demo/: CMakeLists.txt  README.md
mac_config/: .zshrc
msys2/: msys2环境搭建.md
python/: main.py
个人文件/: Typora 画图教程.md
硬件/: K2 键盘.md  树莓派安装openueler.md
系统/: system_config.sh
(+266 files in other folders)
